Bug 1672701 - Add a 100ms delay to the tab-to-search animation. r=adw
100ms is a point at which most results have populated for most people, according to Telemetry. Adding this delay reduces the amount of motion at any given point in the Urlbar. This also has the nice added benefit of not showing the animation for people typing an unrelated query who type at least moderately quickly. For example, if "amazon.com" is autofilled when the user types "a", but they're typing "apple", we don't show the animation if they type "ap" in <100ms.

Telemetry suggests this delay could be as short as 75ms and still be effective, but 100ms seemed like a nice compromise between making the delay as long as possible and not playing an animation well after the user stops interacting with the Urlbar.

Differential Revision: https://phabricator.services.mozilla.com/D95182

UltraBlame original commit: 9c9e4948dd3bd1ea0126773a8ac02f166ed9661b

--- a/browser/themes/shared/urlbarView.inc.css
+++ b/browser/themes/shared/urlbarView.inc.css
@@ -463,20 +463,23 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
+  
+
+
   @keyframes urlbarView-action-slide-in {
-    0% {
-      transform: translateX(var(--urlbarView-action-slide-in-distance));
+    0%, 28.6% {
+      translate: var(--urlbarView-action-slide-in-distance);
       opacity: 0;
     }
     100% {
-      transform: translateX(0);
+      translate: 0;
       opacity: 1;
     }
   }
 
   .urlbarView-results > .urlbarView-row > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-title:not(:empty) ~ .urlbarView-action[slide-in] {
     animation-name: urlbarView-action-slide-in;
-    animation-duration: 250ms;
+    animation-duration: 350ms;
     animation-timing-function: var(--animation-easing-function);
   }
 }
